--- a/car-rental-app/src/index.css
+++ b/car-rental-app/src/index.css
@@ -11,3 +11,80 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.header {
+  background-color:blue;
+  display: flex;
+  flex-direction:row;
+  align-items: center;
+  justify-content: left;
+  border: 8px solid white;
+  border-style:double;
+}
+
+.div1
+{
+  flex-direction:row;
+  align-items: center;
+  justify-content: right;
+}
+
+
+.form-control {
+  margin: 20px 0;
+}
+
+.form-control label {
+  display: block;
+}
+
+.form-control input {
+  width: 60%;
+  height: 40px;
+  margin: 5px;
+  padding: 3px 7px;
+  font-size: 17px;
+}
+
+.form-control-check {
+  align-items: center;
+  justify-content: space-between;
+  flex-direction:row;
+}
+
+.form-control-check label {
+  flex: 1;
+}
+
+.form-control-check input {
+  flex: 2;
+  height: 20px;
+}
+
+.btn {
+  display: inline-block;
+  background: #000;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: inherit;
+}
+
+.btn:focus {
+  outline: none;
+}
+
+.btn:active {
+  transform: scale(0.98);
+}
+
+.btn-block {
+  display: block;
+  float:inline-start;
+  width: 60%;
+}
